--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -3,10 +3,9 @@ kind: Service
 metadata:
   name: portfolio-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: portfolio-site
   ports:
   - port: 80
     targetPort: 80
-    nodePort: 30080
