--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: portfolio-site
+  labels:
+    app: portfolio-site
 spec:
   replicas: 2
   selector:
@@ -13,8 +15,8 @@ spec:
         app: portfolio-site
     spec:
       containers:
-      - name: portfolio-site
-        image: portfolio-site:1.0
-        imagePullPolicy: IfNotPresent
-        ports:
-        - containerPort: 80
+        - name: portfolio-site
+          image: ghcr.io/lucasdeliberal/portfolio-site:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 80
